samples/_failures_safe/1761219791_e0ab6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_431f28f3.c: In function ‘parse_assignment’:
./samples/SAFE/__tmp_431f28f3.c:153:16: error: missing terminating " character
  153 |         printf("Error: Expected identifier at line %d, column
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_431f28f3.c:153:9: error: expected expression at end of input
  153 |         printf("Error: Expected identifier at line %d, column
      |         ^~~~~~
./samples/SAFE/__tmp_431f28f3.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_431f28f3.c:153:9: error: expected declaration or statement at end of input
